# aegis

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230729134143_baseline.sql
src-tauri/src/: commands.rs  main.rs
src/app/: error.tsx  menu.tsx  root.tsx
src/app/auth/: onboarding.tsx  reset.tsx  unlock.tsx  welcome.tsx
src/app/auth/create/: index.tsx  step-1.tsx  step-2.tsx
src/app/authenticator/: codes.tsx  index.tsx  new.tsx
src/app/passwords/: index.tsx
src/app/space/: codes.tsx  index.tsx  new.tsx
src/app/twofa/: codes.tsx  index.tsx  new.tsx
src/shared/: appLayout.tsx  authLayout.tsx  protected.tsx
src/shared/icons/: arrowLeft.tsx  arrowRight.tsx  arrowRightCircle.tsx  eyeOff.tsx  index.tsx  loader.tsx
src/stores/: onboarding.tsx  password.tsx  stronghold.tsx
src/utils/: constants.ts  storage.tsx  types.d.ts
src/utils/hooks/: useCodes.tsx  useSecureStorage.tsx  useUser.tsx
